tests/error/0029.exl
let
    f = { a, b }: a
in
    f { b = 2 }
      ^ERROR
